// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinimalRuleHeader renders, outcomeType = fail 1`] = `
<DocumentFragment>
  <span
    class="rule-detail"
    data-automation-id="rule-detail"
  >
    <span
      class="outcomeChipContainer"
    >
      <span
        aria-hidden="true"
      >
        <mock-outcomechip
          count="2"
          outcometype="fail"
        />
      </span>
    </span>
    <span>
      <span
        class="rule-details-id"
        data-automation-id="cards-rule-id"
      >
        <strong>
          rule id
        </strong>
      </span>
      : 
      <span
        class="rule-details-description"
      >
        rule description
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`MinimalRuleHeader renders, outcomeType = inapplicable 1`] = `
<DocumentFragment>
  <span
    class="rule-detail"
    data-automation-id="rule-detail"
  >
    <span
      class="outcomeChipContainer"
    />
    <span>
      <span
        class="rule-details-id"
        data-automation-id="cards-rule-id"
      >
        <strong>
          rule id
        </strong>
      </span>
      : 
      <span
        class="rule-details-description"
      >
        rule description
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`MinimalRuleHeader renders, outcomeType = incomplete 1`] = `
<DocumentFragment>
  <span
    class="rule-detail"
    data-automation-id="rule-detail"
  >
    <span
      class="outcomeChipContainer"
    />
    <span>
      <span
        class="rule-details-id"
        data-automation-id="cards-rule-id"
      >
        <strong>
          rule id
        </strong>
      </span>
      : 
      <span
        class="rule-details-description"
      >
        rule description
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`MinimalRuleHeader renders, outcomeType = pass 1`] = `
<DocumentFragment>
  <span
    class="rule-detail"
    data-automation-id="rule-detail"
  >
    <span
      class="outcomeChipContainer"
    />
    <span>
      <span
        class="rule-details-id"
        data-automation-id="cards-rule-id"
      >
        <strong>
          rule id
        </strong>
      </span>
      : 
      <span
        class="rule-details-description"
      >
        rule description
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`MinimalRuleHeader renders, outcomeType = review 1`] = `
<DocumentFragment>
  <span
    class="rule-detail"
    data-automation-id="rule-detail"
  >
    <span
      class="outcomeChipContainer"
    >
      <span
        aria-hidden="true"
      >
        <mock-outcomechip
          count="2"
          outcometype="review"
        />
      </span>
    </span>
    <span>
      <span
        class="rule-details-id"
        data-automation-id="cards-rule-id"
      >
        <strong>
          rule id
        </strong>
      </span>
      : 
      <span
        class="rule-details-description"
      >
        rule description
      </span>
    </span>
  </span>
</DocumentFragment>
`;
